Kafka Connect: Apply apache/iceberg#16366 retriable rebalance commits
Source: apache/iceberg#16366

Purpose:
- Treat selected transactional producer commit failures during rebalance as retriable so Kafka Connect can redeliver the batch after the group stabilizes.
- Cover CommitFailedException, InvalidProducerEpochException, and ProducerFencedException by default.

Standalone integration:
- Added configurable retriable exception class names to IcebergSinkConfig.
- Translated matching transactional commit failures to RetriableException in the channel send path.

Adjustments and notes:
- Preserved apache/iceberg#14618 reporter setup, apache/iceberg#16156 coordinator shutdown semantics, and apache/iceberg#11623 RecordRouter-shaped SinkWriter cleanup.